[tool.poetry]
name = "productivity-timer"
version = "0.1.0"
description = ""
authors = ["Luke Holmes"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
simpleaudio = "^1.0.4"

[tool.poetry.dev-dependencies]
flake8 = "^4.0.1"
mypy = "^0.910"
black = "^21.11b1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
